[package]
name = "minlambda"
version = "0.1.0"
authors = ["iliana destroyer of worlds <iliana@buttslol.net>"]
edition = "2018"
description = "Minimalist AWS Lambda runtime for Rust"
readme = "README.md"
repository = "https://github.com/iliana/minlambda"
license = "MIT"
keywords = ["aws", "lambda"]
categories = ["web-programming"]

[dependencies]
serde = "1"
serde_json = "1"

[package.metadata.docs.rs]
targets = []

[profile.release]
codegen-units = 1
lto = true
opt-level = 's'
